--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@ionic-native/core": "~4.15.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
+    "@ionic-native/toast": "^4.15.0",
     "@ionic/storage": "2.2.0",
+    "cordova-plugin-x-toast": "2.7.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -35,5 +37,10 @@
     "@ionic/lab": "1.0.11",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-x-toast": {}
+    }
+  }
 }
