--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic-native/toast": "^4.15.0",
+    "@ionic-native/vibration": "^4.16.0",
     "@ionic/storage": "2.2.0",
     "cordova-android": "7.1.1",
     "cordova-plugin-device": "^2.0.2",
@@ -32,6 +33,7 @@
     "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-vibration": "3.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-toast": "^2.7.0",
     "ionic-angular": "3.9.2",
@@ -56,7 +58,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-vibration": {}
     },
     "platforms": [
       "android"
